# lidarCodeQt

./: CMakeLists.txt
src/groundRemove/: CMakeLists.txt
src/groundRemove/include/: bin.h  cloud.h  component_clustering.h  groundRemove.h  param.h
src/groundRemove/src/: component_clustering.cpp  groundRemove.cpp  segment.cpp  test.cpp
src/qt/: CMakeLists.txt
src/qt/drawables/: CMakeLists.txt  drawable_cloud.cpp  drawable_cloud.h
src/qt/utils/: CMakeLists.txt  ref.cpp  utils.cpp  utils.h
src/qt/viewer/: viewer.cpp  viewer.h
src/qt/widgets/: CMakeLists.txt  base_viewer_widget.cpp  base_viewer_widget.h  mainwindow.cpp  mainwindow.h  param.h  widget.cpp  widget.h
src/qt/widgets/ui/: mainwindow.ui  widget.ui
